--- a/TP2/.vscode/settings.json
+++ b/TP2/.vscode/settings.json
@@ -45,6 +45,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "ctime": "cpp"
+        "ctime": "cpp",
+        "fstream": "cpp",
+        "sstream": "cpp"
     }
 }
