--- a/TP2/.vscode/settings.json
+++ b/TP2/.vscode/settings.json
@@ -47,6 +47,7 @@
         "typeinfo": "cpp",
         "ctime": "cpp",
         "fstream": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "cstring": "cpp"
     }
 }
