correction bug 208 + almost end 302

--- a/TP2/.vscode/settings.json
+++ b/TP2/.vscode/settings.json
@@ -48,6 +48,7 @@
         "ctime": "cpp",
         "fstream": "cpp",
         "sstream": "cpp",
-        "cstring": "cpp"
+        "cstring": "cpp",
+        "iomanip": "cpp"
     }
 }
