--- a/TP3/.vscode/settings.json
+++ b/TP3/.vscode/settings.json
@@ -47,6 +47,7 @@
         "iterator": "cpp",
         "numeric": "cpp",
         "random": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "cstring": "cpp"
     }
 }
