--- a/TP4/exo_403/makefile
+++ b/TP4/exo_403/makefile
@@ -12,7 +12,7 @@ EXECDIR:= bin
 VPATH=src 
 EXEC=prog
 SRC= $(wildcard src/*.cpp)
-OBJECTS= main.o hanoi.o
+OBJECTS= main.o printer.o sousp.o file.o
 OBJ= $(addprefix $(OBJDIR)/,$(OBJECTS))
 
 all : $(EXECDIR)/$(EXEC)
@@ -28,9 +28,13 @@ $(EXECDIR)/$(EXEC): $(OBJ) | $(EXECDIR)
 $(EXECDIR):
 	mkdir $(EXECDIR)
 
-$(OBJDIR)/main.o: src/hanoi.h
+$(OBJDIR)/main.o: src/entete.h src/printer.h
 
-$(OBJDIR)/hanoi.o: src/hanoi.h 
+$(OBJDIR)/file.o: src/file.h 
+
+$(OBJDIR)/printer.o: src/printer.h 
+
+$(OBJDIR)/sousp.o: src/entete.h 
 
 $(OBJDIR)/%.o: src/%.cpp | $(OBJDIR)
 	@$(CXX) -o $@ -c $< $(CXXFLAGS)
@@ -47,3 +51,5 @@ clean:
 
 mrproper: clean
 	@rm -rf $(EXEC)
+
+
